Implement the functionality of 'Create Post Guidelines'
