# src/main/java/com/youdeyiwu/model/dto/config/UpdateCreateGuidePostConfigDto.java
@@ -1,0 +1,14 @@
+package com.youdeyiwu.model.dto.config;
+
+import java.io.Serializable;
+
+/**
+ * update create guide.
+ *
+ * @param createGuide createGuide
+ */
+public record UpdateCreateGuidePostConfigDto(
+    String createGuide
+) implements Serializable {
+
+}
