# src/main/java/com/youdeyiwu/model/dto/forum/UpdateCreatePostGuideSectionDto.java
@@ -1,0 +1,14 @@
+package com.youdeyiwu.model.dto.forum;
+
+import java.io.Serializable;
+
+/**
+ * update create post guide.
+ *
+ * @param createPostGuide createPostGuide
+ */
+public record UpdateCreatePostGuideSectionDto(
+    String createPostGuide
+) implements Serializable {
+
+}
